tests/NormalTests/paczka1/fuzzy1/23322966.err
Error in line 1: Pixx8v S902 E3,0
Error in line 6: tX9YBh1S99 S504 88,5
Error in line 12: A967 A967 335,7
Error in line 27: Pixx8v S902 6,6
Error in line 30: ZD0WQcV1tc A967 25,6
Error in line 33: A967 A291 51,5
